kubernetes/apps/immich/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  namespace: immich
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - "immich.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      timeouts:
        request: 10m
