kubernetes/apps/immich/templates/immich-ratelimit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-auth
  namespace: immich
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - "immich.michaelmuzafarov.dev"
  rules:
    - matches:
        # See all auth endpoints https://api.immich.app/endpoints/authentication
        # /api prefix for api root
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: immich-server
          port: 2283
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: immich-auth-ratelimit
  namespace: immich
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: immich-auth
  rateLimit:
    local:
      rules:
        - limit:
            requests: 5
            unit: Minute
