kubernetes/apps/immich/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich
  namespace: immich
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
